--- a/.vitepress/theme/styles/components/back-to-top.css
+++ b/.vitepress/theme/styles/components/back-to-top.css
@@ -3,9 +3,9 @@
  * -------------------------------------------------------------------------- */
 
 .go-to-top {
-  width: 36px;
-  height: 36px;
-  line-height: 36px;
+  width: 3rem;
+  height: 3rem;
+  line-height: 3.5rem;
   padding: 0;
   text-align: center;
   border-radius: 50%;
@@ -22,8 +22,8 @@
   }
 
   & .icon-top {
-    width: 1em;
-    height: 1em;
+    width: 1.5rem;
+    height: 1.5rem;
     font-size: 14px;
     display: inline-block;
     color: var(--vp-c-brand-1);
