--- a/app/Drupal/nts_theme/templates/layout/region/region--footer.html.twig
+++ b/app/Drupal/nts_theme/templates/layout/region/region--footer.html.twig
@@ -11,12 +11,9 @@
  * @see template_preprocess_region()
  */
 #}
-{% set classes = [
-  'region',
-  'region-' ~ region|clean_class,
-] %}
+{% set classes = ['footer'] %}
 {% if content %}
-  <section {{ attributes.addClass(classes) }} >
+  <footer {{ attributes.addClass(classes) }} role="contentinfo">
     {{ content }}
-  </section>
+  </footer>
 {% endif %}
